# pharaoh

./: CMakeLists.txt  README.md
data/: debug-tests.sh  debug.sh  profile.sh  run.sh  tests.sh  valgrind.sh
src/: CMakeLists.txt  main.cc
src/lib/: App.cc  App.hh  CMakeLists.txt
src/lib/app/: CMakeLists.txt  ColorUtils.hh  ColorUtils.hxx  PGEApp.hh  olcPixelGameEngine.h
src/lib/coordinates/: CMakeLists.txt
src/lib/game/: CMakeLists.txt  Game.cc  Game.hh  Game.hxx  GameState.cc  SavedGames.cc
src/lib/game/core/: Building.cc  Building.hh  CMakeLists.txt  Calendar.cc  Calendar.hh  Citizen.cc  Citizen.hh  CitizenGenerator.cc  CitizenGenerator.hh  CitizenService.cc  CitizenService.hh  Coordinate.cc  Coordinate.hh  Index.hh  Map.cc  Map.hh  MapPoint.hh  RoadNetwork.cc  RoadNetwork.hh  Scenario.cc  Scenario.hh  Terrain.cc  Terrain.hh  Tile.cc  Tile.hh  TimeManager.cc  TimeManager.hh
src/lib/game/core/services/: CMakeLists.txt  Citizens.cc  Citizens.hh  Figures.cc  Figures.hh  Migrants.cc  Migrants.hh  Service.cc  Service.hh
src/lib/game/core/services/citizens/: CMakeLists.txt  Immigrant.cc  Immigrant.hh  LaborSeeker.cc  LaborSeeker.hh  LocatorAdaptor.cc  LocatorAdaptor.hh  PathFinder.cc  PathFinder.hh  Runner.cc  Runner.hh
src/lib/game/core/services/citizens/astar/: AStar.cc  AStar.hh  AStarNodes.cc  AStarNodes.hh  CMakeLists.txt  Locator.hh  Node.cc  Node.hh  Path.cc  Path.hh
src/lib/ui/: CMakeLists.txt
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/lib/: CMakeLists.txt
tests/unit/lib/app/: CMakeLists.txt
tests/unit/lib/coordinates/: CMakeLists.txt
